feat: sorting people by Id desc